deploy/dev/02_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: traefik
  tls:
    - secretName: notification-server-tls
      hosts:
        - notification.dev.plugins.vultisig.com
  rules:
    - host: notification.dev.plugins.vultisig.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: notification-server
                port:
                  number: 80
